# magicdog_sdk

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_ZH.md  format.sh
cmake/: magicdog_sdkConfig.cmake.in  magicdog_sdkTargets.cmake
doc/: parameters.md
doc/source/cpp_api/: 1.robot_reference.md  2.high_level_motion_reference.md  3.low_level_motion_reference.md  4.sensor_reference.md  5.audio_reference.md
doc/source/examples/: 1.high_level_motion_example.md  2.low_level_motion_example.md  3.sensor_example.md  4.audio_example.md  5.monitor_example.md
doc/source/overview/: 1.overview_reference.md  3.service_reference.md  4.quick_start_reference.md
doc/source/python_api/: 1.robot_reference.md  2.high_level_motion_reference.md  3.low_level_motion_reference.md  4.sensor_reference.md  5.audio_reference.md  6.monitor_reference.md
example/: high_level_walk.cpp  low_level_joint_interpolation.cpp
example/cpp/: CMakeLists.txt
example/cpp/audio_example/: CMakeLists.txt  README.txt  audio_example.cpp
example/cpp/cmake_example/: cmake_example.cpp
example/cpp/display_example/: CMakeLists.txt  README.txt  display_example.cpp
example/cpp/high_level_motion_example/: CMakeLists.txt  README.md  README.txt  high_level_motion_example.cpp
example/cpp/low_level_motion_example/: CMakeLists.txt  README.txt  low_level_motion_example.cpp
example/cpp/monitor_example/: CMakeLists.txt  README.txt  monitor_example.cpp
example/cpp/sensor_example/: CMakeLists.txt  README.txt  sensor_example.cpp
example/cpp/slam_navigation_example/: navigation_example.cpp  slam_example.cpp
example/pybind11_test/: test_audio_struct.py  test_display_struct.py
example/python/: audio_example.py  display_example.py  high_level_motion_example.py  low_level_motion_example.py  monitor_example.py  multi_thread_test.py  navigation_example.py  sdk_feature_utils.py  sensor_example.py  slam_example.py
example/python/viz_nav/: README.md  mp_persondet.py  requirements.txt  viz_nav.py
example/python/viz_nav/models/: .gitignore
include/: DataCmdExchange.h  common.h  magic_audio.h  magic_display.h  magic_err.h  magic_export.h  magic_motion.h  magic_robot.h  magic_sdk_version.h  magic_sensor.h  magic_state_monitor.h  magic_type.h
lib/x86_64/: magicdog_python.pyi
scripts/: auto_lcminit.sh  config_network_lcm.sh  install.sh  sdk_init  sdk_init_aarch64
